# garbageCodes

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  weird.js
src/: CMakeLists.txt  bit_rotation.c  check_param_ref.rs  prime_numbers.rs
