[package]
name = "garbage_codes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_param_ref"
path = "src/bin/check_param_ref.rs"

[[bin]]
name = "bit_rotation"
path = "src/bin/bit_rotation.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
